--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "0.1"
+version: "3.5"
 services:
   dashboard:
       image: grafana/grafana-enterprise
@@ -7,12 +7,19 @@ services:
       restart: always
       volumes:
       - grafana:/var/lib/grafana
+      
   mongo:
       image: mongo
       ports:
         - 9087:27017
       volumes:
         - mongodb:/data/db
+      networks:
+        - some-net
 volumes:
   mongodb:
   grafana:
+
+networks:
+  some-net:
+    driver: bridge
