--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,32 @@ services:
       - grafana:/var/lib/grafana
       networks:
         - some-net
-      
-  influx:
-      image: influxdb
-      ports:
-        - 8086:8086
-      volumes:
-        - influxdb:/data/db
-      networks:
+
+  influxdb:
+    image: quay.io/influxdb/influxdb:v2.0.4
+    container_name: influxdb
+    volumes:
+      - influxdb:/var/lib/influxdb
+      - influxdbConfig:/influxdbv2:/root/.influxdbv2
+    ports:
+      - "8086:8086"
+    networks:
         - some-net
+
+  influxdb_cli:
+    links:
+      - influxdb
+    image: quay.io/influxdb/influxdb:v2.0.4
+    entrypoint: influx setup --bucket test_bucket -t test_token -o test_org --username=test_username --password=test_password --host=http://influxdb:8086 -f
+    networks:
+        - some-net
+    restart: on-failure:20
+    depends_on:
+      - influxdb
+      
 volumes:
   influxdb:
+  influxdbConfig:
   grafana:
 
 networks:
