--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: influxdb
     volumes:
       - influxdb:/var/lib/influxdb
-      - influxdbConfig:/influxdbv2:/root/.influxdbv2
+      - influxdbConfig:/root/.influxdbv2
     ports:
       - "8086:8086"
     networks:
