--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,31 +10,20 @@ services:
       networks:
         - some-net
 
-  influxdb:
-    image: quay.io/influxdb/influxdb:v2.0.4
-    container_name: influxdb
+  prometheus:
+    image: prom/prometheus
+    restart: always
     volumes:
-      - influxdb:/var/lib/influxdb
-      - influxdbConfig:/root/.influxdbv2
+      - ./prometheus:/etc/prometheus
+      - prometheusdb:/prometheus
     ports:
-      - "8086:8086"
+      - "9000:9090"
     networks:
         - some-net
+    command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml
 
-  influxdb_cli:
-    links:
-      - influxdb
-    image: quay.io/influxdb/influxdb:v2.0.4
-    entrypoint: influx setup --bucket test_bucket -t test_token -o test_org --username=test_username --password=test_password --host=http://influxdb:8086 -f
-    networks:
-        - some-net
-    restart: on-failure:20
-    depends_on:
-      - influxdb
-      
 volumes:
-  influxdb:
-  influxdbConfig:
+  prometheusdb:
   grafana:
 
 networks:
