--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -22,3 +22,9 @@ scrape_configs:
     static_configs:
       - targets:
           - 'network-monitor:7896'
+
+  - job_name: host_monitor_service
+    metrics_path: /metrics
+    static_configs:
+      - targets:
+          - 'nulkl:3000'
