fixed config to correct target

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -27,4 +27,4 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
       - targets:
-          - 'nulkl:3000'
+          - 'host-system-monitor:3000'
